[package]
name = "ryth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ryth"
path = "src/main.rs"

[[bin]]
name = "gen-docs"
path = "src/gen_docs.rs"

[dependencies]
iwdrs = { path = "../iwdrs", features = ["tokio"] }
clap = { path = "../clap", features = ["derive"] }
clap_mangen = { path = "../clap/clap_mangen" }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-lite = "2"
