[package]
name = "ryth"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
description = "Scriptable iwd interface for scripts and automation widgets"
repository = "https://github.com/knownasnaffy/ryth"
keywords = ["iwd", "wifi", "networking", "cli"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["docs/", "src/gen_docs.rs"]

[[bin]]
name = "ryth"
path = "src/main.rs"

[[bin]]
name = "gen-docs"
path = "src/gen_docs.rs"

[dependencies]
iwdrs = "0.2.6"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-lite = "2"
